Fix surefire system props